18.2.7-ingress-ssl-to-backend/nginx-web-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ssl-to-backend
  namespace: avi-feature
  labels:
    feature: ssl-to-backend 
spec:
  replicas: 2
  selector:
    matchLabels:
      feature: ssl-to-backend       
  template:
    metadata:
      labels:
        feature: ssl-to-backend 
    spec:
      containers:
      - name: nginx-ssl-to-backend 
        image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: nginx
        configMap:
          name: nginx
