18.2.7-ingress-ssl-to-backend/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ssl-to-backend
  namespace: avi-feature
  labels:
    feature: ssl-to-backend 
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: tcp
  selector:
    feature: ssl-to-backend
