18.2.7-ingress-ssl-to-backend/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ssl-to-backend
  namespace: avi-feature
  labels:
    feature: ssl-to-backend   
  annotations:
    avi_proxy: |
      {"virtualservice":{
        "enable_rhi": true,
        "east_west_placement": false
       },
       "pool":{
         "ssl_profile_ref":"/api/sslprofile?name=System-Standard"
       }
      }
spec:
  tls:
  - hosts:
    - ssl-to-backend.demo.corp.local
    secretName: tls-ingress
  rules:
  - host: ssl-to-backend.demo.corp.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-ssl-to-backend
          servicePort: 443
